--- a/src/playground/components/FloatingButtons/style.css
+++ b/src/playground/components/FloatingButtons/style.css
@@ -7,9 +7,9 @@
     Meiryo,
     sans-serif;
   display: flex;
-  gap: 8px;
+  gap: 4px;
   position: fixed;
-  top: 8px;
-  right: 8px;
+  top: 4px;
+  right: 4px;
   z-index: 100000;
 }
