--- a/src/playground/components/List/style.css
+++ b/src/playground/components/List/style.css
@@ -5,6 +5,7 @@
   gap: 4px;
   position: fixed;
   width: 80vw;
+  box-sizing: border-box;
   left: 10vw;
   top: 24px;
   z-index: 50;
